--- a/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataTablePage.razor
+++ b/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataTablePage.razor
@@ -90,6 +90,6 @@
         await completion.Task;
     }
 
-    public string Outcode => WeatherState.Value?.OC ?? String.Empty;
+    public string Outcode => WeatherState.Value?.OutCode ?? String.Empty;
 
 }
