--- a/Energy.App.Standalone/Pages/HtmlContentFiles/WelcomeScreenContent.razor
+++ b/Energy.App.Standalone/Pages/HtmlContentFiles/WelcomeScreenContent.razor
@@ -5,65 +5,35 @@
     <MudText Typo="Typo.body1" Align="Align.Start">
         <div class="welcome-screen-content">
             <p>
-                <strong>Explain My Energy</strong> is a free, open-source web application to help you understand both your existing
-                energy bills and your future energy costs and consumption.
+                <strong>Explain My Energy</strong> is a free, open-source web application, for UK users, to help understand both existing
+                energy bills and forecast future energy costs and consumption. Full documentation is available at <MudLink Target="_blank" Href="https://docs.explainmyenergy.net">docs.explainmyenergy.net <i aria-hidden="true" class="fa-solid fa-external-link fa-xs"></i></MudLink>
             </p>
-            <p>
-                It is designed to be used by anyone, as long as you have a smart meter (it doesn't even have to be
-                working).
-            </p>
-            <p>
-                The application uses your historical energy usage, your energy tariff details and local weather data to
-                give you:
-            </p>
-            <ul class="ml-3">
-                <li>Detailed breakdowns of your historical, current and future energy costs and consumption</li>
-                <li>
-                    How much your costs change with weather changes - change the forecast, and see how much your energy
-                    usage spikes (or drops)
-                </li>
-                <li>
-                    Powerful charting tools that allow you to see everything from granular hourly energy spikes, to
-                    whole seasonal energy costs, simply with a mouse scroll (or a swipe)
-                </li>
-            </ul>
+            <ul>
 
-
-            <ul class="ml-3">
                 @if (AppStatus.IsDemoMode)
                 {
-                    <li>
-                        This is a <strong>Demo Version</strong> of the app. No setup functionality is available, instead, the app is pre-configured with example data.
-                        Instead, you can explore the app, and see the Analysis it can provide, along with the typical setup data required.
-                        The live version, with full functionality, is available at <MudLink Href="https://explainmyenergy.net">explainmyenergy.net</MudLink>
-                    </li>
+                    <li>This is a <strong>Demo Version</strong> of the app, with example data. No setup functionality is available, instead you can explore the app and see the analysis and typical setup data required.</li>
+                    <li>The live version, with full functionality, is available at <MudLink Href="https://explainmyenergy.net">explainmyenergy.net</MudLink></li>
                 }
                 else
                 {
 
                     <li>To view a demo version, with setup pre-configured with example data, go to <MudLink Href="https://demo.explainmyenergy.net">demo.explainmyenergy.net</MudLink></li>
                 }
+
+
                 <li>
-                    The app doesn't sell energy; doesn't sell your data; it doesn't collect your
-                    data. There is no sign up, no login, no cookies, no tracking, no ads.
+                    <strong>This is a hobby project, and a beta version of the application.</strong>
+                    Feel free to raise an issue in the <MudLink Target="_blank" Href="https://github.com/zola-25/Explain-My-Energy">GitHub Repo <i aria-hidden="true" class="fa-solid fa-external-link fa-xs"></i></MudLink> or email me at <MudLink Href="mailto:explainmyenergy@solores-software.net">explainmyenergy@solores-software.net</MudLink>
                 </li>
-                <li>The app uses Blazor WebAssembly process everything on your device.</li>
 
-
-            </ul>
-
-            <p>
-                <strong>This is a hobby project, and a beta version of the application.</strong> 
-                Feedback is appreciated. Feel free to email me at <MudLink Href="mailto:explainmyenergy@solores-software.net">explainmyenergy@solores-software.net</MudLink> 
-                or raise an issue in the <MudLink Href="https://github.com/zola-25/Explain-My-Energy">GitHub Repo</MudLink>
-            </p>
-
-            <p>
-                <strong>Explain My Energy's</strong> Terms &amp; Conditions can be viewed here: <MudLink aria-haspopup="dialog"
-                                                                                                         OnClick="ShowTermsDialog">Terms &amp; Conditions</MudLink>
-            </p>
-            <ul class="ml-3">
-                <li>By using this application, you acknowledge that you agree to these terms. The Privacy Policy is also available here: <MudLink OnClick="ShowPrivacyDialog" aria-haspopup="dialog">Privacy Policy</MudLink></li>
+                <li>
+                    <MudLink aria-haspopup="dialog"
+                             OnClick="ShowTermsDialog">Terms &amp; Conditions</MudLink> and <MudLink OnClick="ShowPrivacyDialog" aria-haspopup="dialog">Privacy Policy</MudLink>
+                </li>
+                <li>
+                    <strong>Acknowledgements:</strong> This app functions thanks to <MudLink Target="_blank" Href="https://www.amcharts.com">amcharts5 <i aria-hidden="true" class="fa-solid fa-external-link fa-xs"></i></MudLink>, <MudLink Target="_blank" Href="https://www.n3rgy.com/consumer/">n3rgy.com <i aria-hidden="true" class="fa-solid fa-external-link fa-xs"></i></MudLink>, <MudLink Target="_blank" Href="https://open-meteo.com">open-meteo.com <i aria-hidden="true" class="fa-solid fa-external-link fa-xs"></i></MudLink>, <MudLink Target="_blank" Href="https://postcodes.io">postcodes.io <i aria-hidden="true" class="fa-solid fa-external-link fa-xs"></i></MudLink>
+                </li>
             </ul>
 
             <MudDialog @bind-IsVisible="TermsDialogVisible" Options="DialogOptions" ClassActions="d-flex justify-center">
@@ -93,15 +63,12 @@
 
             @if (AppStatus.IsDemoMode)
             {
-                <ul class="ml-3">
-                    <li>Feel free to explore the application - from the Side Menu you can access the analysis and experiment with the options, and the Setup page will show the an example of the data needed to configure the live application</li>
-                </ul>
-
+                <p>Feel free to explore the application - from the Side Menu you can access the analysis and setup pages</p>
             }
             else
             {
                 <ul class="ml-3">
-                    <li>There is a Setup Wizard that provides a simple step-by-step process to configuring the application.</li>
+                    <li>The Setup Wizard provides a simple step-by-step process to configuring the application.</li>
                     <li>Otherwise feel free to explore the application and set up your home and meters manually.</li>
                 </ul>
             }
