App lock/unlocking - unlocking incomplete, see TODO in unlock component

--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeterFormComponent.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeterFormComponent.razor
@@ -1,5 +1,11 @@
 @inherits FluxorComponent
 @inject IDispatcher Dispatcher
+@inject IState<UserLockState> UserLockState
+@inject AppStatus AppConfig
+
+@{
+    var disableInputs = AppConfig.IsDemoMode || UserLockState.Value.LockingOrLocked;
+}
 
 @if (_ready)
 {
@@ -15,11 +21,11 @@
                 <div class="d-flex flex-column justify-start flex-grow-1 gap-4">
 
                     <div class="d-flex flex-row align-baseline">
-                        <MudTextField For="@(() => _electricityMeter.Mpxn)" Label="Electricity Meter MPAN" @bind-Value="@_electricityMeter.Mpxn" Placeholder="Enter your MPAN number here"
+                        <MudTextField For="@(() => _electricityMeter.Mpxn)" Disabled="disableInputs" Label=" Electricity Meter MPAN" @bind-Value="@_electricityMeter.Mpxn" Placeholder="Enter your MPAN number here"
                                                 Required></MudTextField>
                          <DocTooltipIcon DocSnippetHeader="Electricity Meter MPAN" DocSnippetType="DocSnippetType.ElectricityMeterMPAN" IconTitle="Help for Electricity Meter Setup" />
                      </div>
-                     <MudButton Class="mx-auto" ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary">@(_addingNotUpdating ? "Add" : "Update")</MudButton>
+                     <MudButton Class="mx-auto" Disabled="disableInputs" ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary">@(_addingNotUpdating ? "Add" : "Update")</MudButton>
                 </div>
                 <div id="national-grid-iframe-container" class="mt-5 @(!_hideNationalGrid ? "toggled" : "")">
                     <MudText Typo="Typo.body1" Class="d-flex flex-column justify-center align-center mb-2">
@@ -88,7 +94,7 @@
         {
             _addingNotUpdating = true;
         }
-        _electricityMeter = meterState.eMapToMeterDto();
+        _electricityMeter = meterState.eMapToMeterDto(UserLockState.Value.LockingOrLocked ? "Locked" : null);
         _ready = true;
     }
 
