--- a/Energy.App.Standalone/Shared/MainLayout.razor
+++ b/Energy.App.Standalone/Shared/MainLayout.razor
@@ -27,7 +27,7 @@
                                Target="_Blank" Size="Size.Small">Documentation</MudButton>
                 </div>
                 <div class="w-fit-content menu-nav-item git-hub">
-                    <MudNavLink Icon="@Icons.Custom.Brands.GitHub" IconColor="Color.Inherit" Href="https://github.com/zola-25/Explain-My-Energy"></MudNavLink>
+                    <MudNavLink Target="_Blank" Icon="@Icons.Custom.Brands.GitHub" IconColor="Color.Inherit" Href="https://github.com/zola-25/Explain-My-Energy"></MudNavLink>
                 </div>
             </MudAppBar>
             <MudDrawer UserAttributes="@(new () {{"id", "main-site-links-region"},{"role","region" },{"aria-label","Contains Main Site Navigation Links"}})"
