--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -39,6 +39,8 @@
 @using Energy.App.Standalone.Features.Setup.Household
 @using Energy.App.Standalone.Features.Setup.Household.Actions
 @using Energy.App.Standalone.Features.Setup.TermsAndConditions;
+@using Energy.App.Standalone.Features.Setup.UserState;
+
 
 @using Energy.App.Standalone.Features.Setup.Meter
 @using Energy.App.Standalone.Features.Setup.Meter.Pages
