--- a/Energy.App.Standalone/Features/Setup/Household/Household.razor
+++ b/Energy.App.Standalone/Features/Setup/Household/Household.razor
@@ -1,9 +1,12 @@
 ﻿@inherits FluxorComponent
 @inject IDispatcher Dispatcher
+@inject IState<UserLockState> UserLockState
 @inject AppStatus AppConfig
 
 @if (_readyToInteract)
 {
+    bool disableInputs = AppConfig.IsDemoMode || UserLockState.Value.LockingOrLocked;
+
     <EditForm Model="@_householdDetails" OnValidSubmit="HandleValidSubmit">
 
         <MudCard Elevation="0">
@@ -18,7 +21,7 @@
                                     Placeholder="Select Move-in Date"
                                     FixDay="1"
                                     @bind-Date:after="@(() => { _openTo = OpenTo.Month; })"
-                                    Disabled="@AppConfig.IsDemoMode"
+                                    Disabled="@disableInputs"
                                     OpenTo="@_openTo"
                                     AnchorOrigin="Origin.CenterRight"
                                     TransformOrigin="Origin.CenterRight"
@@ -32,7 +35,7 @@
 
                  <div class="my-3 d-flex align-baseline">
                      <MudTextField For="@(() => _householdDetails.IhdMacId)"
-                     @bind-Value="@_householdDetails.IhdMacId" Required Disabled="@AppConfig.IsDemoMode"
+                                   @bind-Value="@_householdDetails.IhdMacId" Required Disabled="@(disableInputs)"
                                    Placeholder="IHD MAC ID"></MudTextField>
                      <DocTooltipIcon DocSnippetHeader="In-Home Device MAC ID" DocSnippetType="DocSnippetType.HouseholdIHD" IconTitle="Help for IHD MAC ID" />
 
@@ -44,10 +47,11 @@
                                       Clearable="true"
                                       Placeholder="Postal Area"
                                       Culture="@System.Globalization.CultureInfo.InvariantCulture"
-                                      Required
+                                              Required
                                       HelperText="Enter the first two characters and select from the dropdown"
                                       HelperTextOnFocus="true"
-                                      Disabled="@AppConfig.IsDemoMode"
+                                      Disabled="@(disableInputs)"
+                                      UserAttributes="@(new(){{"autocomplete", "off"}})"
                                       ShowProgressIndicator="true" ToStringFunc="@(outCode => outCode.OutCodeCharacters)"
                                       MinCharacters="2"
                                       OnClearButtonClick="ClearPostalArea"
@@ -60,21 +64,21 @@
                  </div>
                  <div class="d-flex align-baseline justify-center">
                      <MudRadioGroup Name="Primary Heat Source" T="MeterType" For="@(() => _householdDetails.PrimaryHeatSource)"
-                                    Disabled="@AppConfig.IsDemoMode" Required @bind-SelectedOption="@_householdDetails.PrimaryHeatSource">
+                                    Disabled="@disableInputs" Required @bind-SelectedOption="@_householdDetails.PrimaryHeatSource">
                          <MudRadio T="MeterType" Option="MeterType.Gas">Gas</MudRadio>
                          <MudRadio T="MeterType" Option="MeterType.Electricity">Electricity</MudRadio>
                      </MudRadioGroup>
                  </div>
              </MudCardContent>
              <MudCardActions Class="d-flex flex-column align-start ">
-                 <MudButton Class="mx-auto" ButtonType="ButtonType.Submit" Variant="Variant.Filled" Size="Size.Medium" Disabled="@AppConfig.IsDemoMode" Color="Color.Primary">@_saveButtonText</MudButton>
+                 <MudButton Class="mx-auto" ButtonType="ButtonType.Submit" Variant="Variant.Filled" Size="Size.Medium" Disabled="@disableInputs" Color="Color.Primary">@_saveButtonText</MudButton>
 
-                 <MudText Class="mx-auto mt-3 fw-bold" Color="Color.Success" hidden="@(!_submitSuccessful)">
-                     <i class="fa-solid fa-check" aria-hidden="true"></i> @_saveResponseMessage
-                 </MudText>
-             </MudCardActions>
-         </MudCard>
-     </EditForm>
+                    <MudText Class="mx-auto mt-3 fw-bold" Color="Color.Success" hidden="@(!_submitSuccessful)">
+                        <i class="fa-solid fa-check" aria-hidden="true"></i> @_saveResponseMessage
+                </MudText>
+            </MudCardActions>
+        </MudCard>
+    </EditForm>
 }
 @code {
 
@@ -103,16 +107,36 @@
     }
 
     OpenTo _openTo = OpenTo.Year;
+
+
+    private HouseholdDetails GetHouseholdDetails()
+    {
+        if (!UserLockState.Value.LockingOrLocked)
+        {
+            return new HouseholdDetails()
+                {
+                    IhdMacId = HouseholdState.Value.IhdMacId,
+                    MoveInDate = HouseholdState.Value.MoveInDate,
+                    OutCode = new OutCode() { OutCodeCharacters = HouseholdState.Value.OutCodeCharacters },
+                    PrimaryHeatSource = HouseholdState.Value.PrimaryHeatSource
+                };
+        }
+        else
+        {
+            return new HouseholdDetails()
+                {
+                    IhdMacId = "Locked",
+                    MoveInDate = new DateTime(1900, 1, 1),
+                    OutCode = new OutCode() { OutCodeCharacters = "Locked" },
+                    PrimaryHeatSource = HouseholdState.Value.PrimaryHeatSource
+                };
+        }
+    }
     private void SetHouseholdInputs()
     {
         _openTo = HouseholdState.Value.MoveInDate is null ? OpenTo.Year : OpenTo.Month;
-        _householdDetails = new HouseholdDetails()
-            {
-                IhdMacId = HouseholdState.Value.IhdMacId,
-                MoveInDate = HouseholdState.Value.MoveInDate,
-                OutCode = new OutCode() { OutCodeCharacters = HouseholdState.Value.OutCodeCharacters },
-                PrimaryHeatSource = HouseholdState.Value.PrimaryHeatSource
-            };
+        
+        _householdDetails = GetHouseholdDetails();
         _saveButtonText = HouseholdState.Value.Saved ? "Update" : "Save";
     }
 
