--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeterFormComponent.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeterFormComponent.razor
@@ -1,5 +1,11 @@
 ﻿@inherits FluxorComponent
 @inject IDispatcher Dispatcher
+@inject IState<UserLockState> UserLockState
+@inject AppStatus AppConfig
+
+@{
+    var disableInputs = AppConfig.IsDemoMode || UserLockState.Value.LockingOrLocked;
+}
 
 @if (_ready)
 {
@@ -15,12 +21,12 @@
                 <div class="d-flex flex-column justify-start flex-grow-1 gap-4">
 
                     <div class="d-flex flex-row align-baseline">
-                        <MudTextField For="@(() => _gasMeter.Mpxn)" Label="Gas Meter MPRN" @bind-Value="@_gasMeter.Mpxn"
+                        <MudTextField Disabled="disableInputs" For="@(() => _gasMeter.Mpxn)" Label="Gas Meter MPRN" @bind-Value="@_gasMeter.Mpxn"
                             Placeholder="Enter your MPRN number here" Required></MudTextField>
                         <DocTooltipIcon DocSnippetHeader="Gas Meter MPRN"
                                          DocSnippetType="DocSnippetType.GasMeterMPRN" IconTitle="Help for Gas Meter Setup" />
                     </div>
-                    <MudButton Class="mx-auto" ButtonType="ButtonType.Submit" Variant="Variant.Filled"
+                     <MudButton Class="mx-auto" Disabled="disableInputs" ButtonType=" ButtonType.Submit" Variant="Variant.Filled"
                         Color="Color.Primary">@(_addingNotUpdating ? "Add" : "Update")</MudButton>
                 </div>
 
@@ -84,7 +90,7 @@
         {
             _addingNotUpdating = true;
         }
-        _gasMeter = meterState.eMapToMeterDto();
+        _gasMeter = meterState.eMapToMeterDto(UserLockState.Value.LockingOrLocked ? "Locked" : null);
         _ready = true;
     }
 
