--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -12,6 +12,7 @@
 @using Energy.App.Standalone.Data.EnergyReadings.Interfaces
 @using Energy.App.Standalone.Shared
 @using Energy.App.Standalone.PageComponents
+@using Energy.App.Standalone.PageComponents.Storage
 @using Energy.App.Standalone.Services;
 @using Energy.App.Standalone.Services.FluxorPersist
 @using Energy.App.Standalone.Services.FluxorPersist.Demo
