--- a/Energy.App.Standalone/src/scss/app/app.scss
+++ b/Energy.App.Standalone/src/scss/app/app.scss
@@ -26,12 +26,12 @@ h1:focus {
 }
 
 .valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
+    border-bottom: 2px solid #26b050;
 }
 
 
 .invalid {
-    outline: 1px solid red;
+    border-bottom: 2px solid red;
 }
 
 .validation-message {
@@ -169,6 +169,19 @@ h1:focus {
     }
 }
 
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.1;
+    }
+}
+
+.icon-fade-out {
+    animation: fadeOut 5s linear;
+}
+
 /* helpers */
 
 .info-chip {
@@ -214,6 +227,10 @@ h1:focus {
 
 .w-150px {
     width: 150px !important;
+}
+
+.minw-130px {
+    min-width: 130px !important;
 }
 
 .w-Inherit {
